gcc/testsuite/rust/rustc/ui/parser/issues/misplaced-return-type-without-type-issue-126311_dg.rs
fn foo<T>() where T: Default -> {
// { dg-error "" "" { target *-*-* } .-1 }
    0
}

fn main() {}

